2012-02-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_builtin_nmap.c (save_open_ports): Use strncmp to match open
	ports, so that "open|filtered" is included.

2012-02-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_builtin_openvas_tcp_scanner.c (banner_grab): Check for the
	T: and U: type specifiers in the port range.

2012-01-26  Henri Doreau <henri.doreau@greenbone.net>

	* misc/arglists.h: Export arg_del_value().

2012-01-26  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c (nmap_run_and_parse): Set proper signal
	handlers to prevent the nmap subprocess from being zombified if the scan is
	stopped.
	(sig_h, sig_c): New.

2012-01-19  Henri Doreau <henri.doreau@greenbone.net>

	Handle CPE codes produced by nmap, if any. Changes are backward
	compatible, with versions of nmap that don't output CPEs.

	* nasl/nasl_builtin_nmap.c (simple_item_destroy, xml_read_text)
	(xmltag_open_cpe, xmltag_close_cpe, set_opentag_callbacks)
	(set_closetag_callbacks, nmap_run_and_parse, current_host_reset)
	(port_destroy, register_service, save_detected_os): Added code to
	handle text sections. Read, store and report content of <cpe> tags.

2012-01-18  Henri Doreau <henri.doreau@greenbone.net>

	Code cleanup to improve efficiency and maintainability.

	* nasl/nasl_builtin_nmap.c (nmap_destroy, list_free)
	(current_host_reset, port_destroy, nse_script_destroy)
	(nmap_get_free_port, nmap_get_free_nse_script, tmphost_add_port)
	(tmphost_add_nse_hostscript, tmphost_add_nse_portscript)
	(save_open_ports, save_portscripts, save_hostscripts):
	Replaced custom linked lists by GSLists from GLib. Use GTrashStacks to
	prevent from constantly alloc/free'ing the same structures.

2012-01-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c: Turn any post_note and post_info
	into post_log message. This change is part of CR#57.

2012-01-03  Henri Doreau <henri.doreau@greenbone.net>
