@@ -1,3 +1,11 @@
+2012-02-09  Henri Doreau <henri.doreau@greenbone.net>
+
+	Initial changes for a false positive auto detection/removal feature.
+
+	* nasl/nasl_misc_funcs.c (simple_register_host_detail): New.
+	(nasl_do_exit):	Store the exit code as host detail if equals to
+	NASL_EXIT_NOTVULN.
+
 2012-02-09  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	* nasl/nasl_builtin_nmap.c (save_open_ports): Use strncmp to match open
